Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
5.5(EOL), 10.1(EOL), 10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL)
-
None
Description
my_thr_timer() call times() which is slow at least on my system. Maybe it's due to spectre mitigations, I don't know. Flame graph shows profiling data for empty test. Perfschema and InnoDB storage engines calls my_thr_timer() while both can actually use the one initialized by server.