storage/innobase/ut/ut0timer.cc
@@ -46,6 +46,7 @@ Function pointer to point selected timer function.
 ulonglong (*ut_timer_now)(void) = &ut_timer_none;
 
 struct my_timer_unit_info ut_timer;
+extern MYSQL_PLUGIN_IMPORT MY_TIMER_INFO sys_timer_info;
 
 /**************************************************************//**
 Sets up the data required for use of my_timer_* functions.
@@ -57,30 +58,27 @@ void
 ut_init_timer(void)
 /*===============*/
 {
-	MY_TIMER_INFO all_timer_info;
-	my_timer_init(&all_timer_info);
-
-	if (all_timer_info.cycles.frequency > 1000000 &&
-	    all_timer_info.cycles.resolution == 1) {
-		ut_timer = all_timer_info.cycles;
+	if (sys_timer_info.cycles.frequency > 1000000 &&
+	    sys_timer_info.cycles.resolution == 1) {
+		ut_timer = sys_timer_info.cycles;
 		ut_timer_now = &my_timer_cycles;
-	} else if (all_timer_info.nanoseconds.frequency > 1000000 &&
-		 all_timer_info.nanoseconds.resolution == 1) {
-		ut_timer = all_timer_info.nanoseconds;
+	} else if (sys_timer_info.nanoseconds.frequency > 1000000 &&
+		 sys_timer_info.nanoseconds.resolution == 1) {
+		ut_timer = sys_timer_info.nanoseconds;
 		ut_timer_now = &my_timer_nanoseconds;
-	} else if (all_timer_info.microseconds.frequency >= 1000000 &&
-		all_timer_info.microseconds.resolution == 1) {
-		ut_timer = all_timer_info.microseconds;
+	} else if (sys_timer_info.microseconds.frequency >= 1000000 &&
+		sys_timer_info.microseconds.resolution == 1) {
+		ut_timer = sys_timer_info.microseconds;
 		ut_timer_now = &my_timer_microseconds;
 
-	} else if (all_timer_info.milliseconds.frequency >= 1000 &&
-		all_timer_info.milliseconds.resolution == 1) {
-		ut_timer = all_timer_info.milliseconds;
+	} else if (sys_timer_info.milliseconds.frequency >= 1000 &&
+		sys_timer_info.milliseconds.resolution == 1) {
+		ut_timer = sys_timer_info.milliseconds;
 		ut_timer_now = &my_timer_milliseconds;
-	} else if (all_timer_info.ticks.frequency >= 1000 &&
+	} else if (sys_timer_info.ticks.frequency >= 1000 &&
 		 /* Will probably be false */
-		all_timer_info.ticks.resolution == 1) {
-		ut_timer = all_timer_info.ticks;
+		sys_timer_info.ticks.resolution == 1) {
+		ut_timer = sys_timer_info.ticks;
 		ut_timer_now = &my_timer_ticks;
 	} else {
 		/* None are acceptable, so leave it as "None", and fill in struct */
